# sqsmv

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.yml  lib.rs  main.rs
