[package]
name = "sqsmv"
version = "0.1.0"
authors = ["Ken Shih <ken.shih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_sqs = "0.45.0"
clap = {version = "2.33", features = ["yaml"]}
# because of rusoto...
tokio = { version = "0.2", features = ["full"] }
uuid = {version = "0.8", features = ["v4"] }
