[package]
name = "sqsmv"
version = "0.1.1"
authors = ["Ken Shih <ken.shih@gmail.com>"]
description = "Moves messages from one sqs queue into another queue e.g. replay dlq to non-dlq"
license = "MIT"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/kenshih/sqsmv"
repository = "https://github.com/kenshih/sqsmv"
keywords = ["cli", "sqs", "aws"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_sqs = "0.45.0"
clap = {version = "2.33", features = ["yaml"]}
# because of rusoto...
tokio = { version = "0.2", features = ["full"] }
uuid = {version = "0.8", features = ["v4"] }
